# proof-of-innocence

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: test.yml
circuit/: Cargo.toml  README.md  package.json
circuit/js/: index.js
circuit/src/: lib.rs
circuit/src/utils/: tornado.rs
circuit/src/utils/tornado/: config.json  index.js  merkle.rs  net.rs  note.rs  typ.rs
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/guest/: Cargo.toml
risc0/types/: Cargo.toml
risc0/types/src/: lib.rs
src/: circuit.rs  main.rs
src/utils/: equal.rs  mod.rs  scalar.rs
zkwasm/: Cargo.toml  Justfile
zkwasm/src/: lib.rs
