[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
hex = "0.4.3"
js-sys = "0.3.61"
regex = "1.7.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.61", features = ["console"] }
