[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
hex = "0.4.3"
js-sys = "0.3.61"
lazy_static = "1.4.0"
regex = "1.7.1"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["console"] }

[dev-dependencies]
num-bigint = "0.4.3"
wasm-bindgen-test = "0.3.34"
